--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,15 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="AppTheme"
+           parent="android:Theme.Holo.Light">
+        <item name="android:actionBarStyle">@style/TSActionBar</item>
+    </style>
+
+    <!-- ActionBar styles -->
+    <style name="TSActionBar"
+           parent="@android:style/Widget.Holo.Light.ActionBar.Solid">
+        <item name="android:background">@color/white</item>
     </style>
 
 </resources>
