Convert activities to ActionBarActivities

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,14 +2,7 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme"
-           parent="android:Theme.Holo.Light">
-        <item name="android:actionBarStyle">@style/TSActionBar</item>
-    </style>
-
-    <!-- ActionBar styles -->
-    <style name="TSActionBar"
-           parent="@android:style/Widget.Holo.Light.ActionBar.Solid">
-        <item name="android:background">@color/white</item>
+           parent="Base.Theme.AppCompat">
     </style>
 
 </resources>
