Add toolbar icons
- Add refresh icon
- Add history icon
- Remove history placeholder button
- Add history functionality to history button

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,8 +1,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity" >
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never" />
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".MainActivity">
+
+    <item android:id="@+id/action_refresh"
+        android:title="Refresh"
+        android:icon="@drawable/ic_action_refresh"
+        app:showAsAction="ifRoom"
+        android:orderInCategory="1"/>
+
+    <item android:id="@+id/action_history"
+        android:title="history"
+        android:icon="@drawable/ic_action_history"
+        app:showAsAction="ifRoom"
+        android:orderInCategory="1"/>
+
 </menu>
