--- a/app/src/main/res/layout/recent_trends_activity.xml
+++ b/app/src/main/res/layout/recent_trends_activity.xml
@@ -23,7 +23,7 @@
         android:paddingRight="@dimen/activity_vertical_margin"
         android:paddingTop="@dimen/activity_horizontal_margin"
         android:paddingBottom="@dimen/activity_horizontal_margin"
-        android:layout_centerVertical="true"
+        android:layout_below="@id/recenttoolbar"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
