--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,13 +17,25 @@
         android:layout_margin="0dp"
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:background="?attr/colorPrimaryDark"/>
-    <TextView
+
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/screenName"
-        android:text="Helllo"/>
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/toolbar"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="20dp">
+        <TextView
+            android:textSize="16sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/screenName"
+            android:text="Hello"/>
+    </RelativeLayout>
+
 
     <ListView
+        android:layout_marginTop="20dp"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@android:id/list"
