--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="white">#FFFFFF</color>
+    <color name="btnBlack">#1A000000</color>
+    <color name="Black">#000000</color>
     <color name="dark_toolbar_blue">#00796b</color>
 </resources>
