--- a/app/src/main/res/layout/view_for_each_trend.xml
+++ b/app/src/main/res/layout/view_for_each_trend.xml
@@ -21,6 +21,7 @@
             android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#686868"
             android:layout_alignParentLeft="true"
             android:visibility="gone"
             android:id="@+id/tweetContent"
