--- a/app/src/main/res/layout/view_for_each_trend.xml
+++ b/app/src/main/res/layout/view_for_each_trend.xml
@@ -26,6 +26,7 @@
             android:visibility="gone"
             android:id="@+id/tweetContent"
             android:hint="Tweet Here"/>
+
         <Button
             android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
@@ -53,15 +54,14 @@
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"/>
 
-        <Button
-            android:layout_width="wrap_content"
+        <ImageButton
+            android:layout_width="115dp"
             android:layout_height="40dp"
             android:layout_centerVertical="true"
-            android:text="Tweet"
             android:layout_alignParentRight="true"
             android:visibility="gone"
             android:id="@+id/updateStatus"
-            android:background="@drawable/button"
+            android:src="@drawable/tweetbutton"
             android:textColor="@color/white"
             android:padding="10dp"
             android:layout_marginTop="5dp"
