--- a/app/src/main/res/layout/view_for_each_trend.xml
+++ b/app/src/main/res/layout/view_for_each_trend.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
-            android:textColor="@color/white"
+            android:textColor="#686868"
             android:layout_alignParentLeft="true"
             android:layout_toLeftOf="@+id/updateStatus"
             android:visibility="gone"
